--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1>Login</h1>
 
 {% if error %}
@@ -20,7 +24,8 @@
     <input type="password" name="password" />
     <br/>
     <br/>
-    <input type="submit" value="Login" />
+    <input class="btn btn-primary" type="submit" value="Login" />
     <br/>
 
 </form>
+{% endblock %}
